[tool.poetry]
name = "s3-copy-concurrent-demo"
version = "0.1.0"
description = ""
authors = ["r-tamura <rtamura30@gmail.com>"]
readme = "README.md"
packages = [{include = "s3_copy_concurrent_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.41"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
